<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".reports.ui.home.HomeActivity">

    <item
        android:id="@+id/menu_sistemas"
        android:title="@string/menu_sistemas"
        app:showAsAction="ifRoom"
        tools:ignore="AppCompatResource"
        android:actionProviderClass="android.widget.ShareActionProvider">

        <menu>
            <item
                android:id="@+id/menu_rank"
                android:title="@string/menu_ranking"
                app:showAsAction="ifRoom"
                tools:ignore="AppCompatResource"
                android:actionProviderClass="android.widget.ShareActionProvider">
            </item>

            <item
                android:id="@+id/menu_sistemas_geral"
                android:title="@string/menu_scores"
                app:showAsAction="ifRoom"
                tools:ignore="AppCompatResource"
                android:actionProviderClass="android.widget.ShareActionProvider">
            </item>
        </menu>
    </item>

    <item
        android:id="@+id/menu_configs"
        android:title="@string/menu_config"
        app:showAsAction="ifRoom"
        tools:ignore="AppCompatResource"
        android:actionProviderClass="android.widget.ShareActionProvider">

        <menu>
            <item
                android:id="@+id/menu_sugestoes"
                android:title="@string/menu_sugest"
                app:showAsAction="ifRoom"
                tools:ignore="AppCompatResource"
                android:actionProviderClass="android.widget.ShareActionProvider">
            </item>
            <item
                android:id="@+id/menu_sair"
                android:title="@string/menu_sair"
                app:showAsAction="ifRoom"
                tools:ignore="AppCompatResource"
                android:actionProviderClass="android.widget.ShareActionProvider">
            </item>
        </menu>
    </item>

</menu>