<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="300dp">

    <RelativeLayout
        android:id="@+id/functional_efficiency_title"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/background_black_rounded">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/museosans_700"
            android:text="@string/system_functional_efficiency_value"
            android:textColor="@color/white_weather"
            android:textSize="30dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/functional_efficiency_title"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">

        <RelativeLayout
            android:id="@+id/problems_line"
            android:layout_width="match_parent"
            android:layout_height="100dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/system_problems_key"
                android:fontFamily="@font/museosans_700"
                android:textColor="@color/black_weather"
                android:textSize="20dp"
                android:layout_alignParentLeft="true"/>

            <TextView
                android:id="@+id/sdm_operational_efficiency_problems"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/system_problems_value"
                android:fontFamily="@font/museosans_700"
                android:textColor="@color/black_weather"
                android:textSize="20dp"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/efficiency_line"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_below="@+id/problems_line">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/system_efficiency_key"
                android:fontFamily="@font/museosans_700"
                android:textColor="@color/black_weather"
                android:textSize="20dp"
                android:layout_alignParentLeft="true"/>

            <TextView
                android:id="@+id/sdm_operational_efficiency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/system_efficiency_value"
                android:fontFamily="@font/museosans_700"
                android:textColor="@color/black_weather"
                android:textSize="20dp"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>